# lend-ai

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  engram-wrapper.sh  install.ps1  install.sh  model-routing.config.json  models.json  opencode.json  pyproject.toml  requirements.txt  update.ps1  update.sh
.githooks/: pre-push  pre-push.bat
commands/: api-fetch.md  archive.md  chrome-connect.md  clean.md  design.md  eda.md  engram-optimize.md  engram-server.md  engram-sync.md  forecast.md  health.md  judgment.md  model-list.md  model-reset.md  model-set-agent.md  model-set-skill.md  model-switch.md  models.md  new-project.md  pipeline.md  profile.md  question.md  report.md  scrape.md  sql.md  validate.md  verify.md  viz.md  youtube.md
docs/: MCP_REQUIREMENTS.md
mcp-servers/: agent-router.py  model-router.py  notion-wrapper.sh  ocr-server.py  postgres-server.py  smtp-wrapper.sh
openspec/: example-spec.md
registry/: AGENT_REGISTRY.md
schemas/: model-routing.schema.json
scripts/: backup-engram.ps1  backup.sh  engram-conflicts.sh  engram-git-sync.sh  engram-smart-sync.sh  install.ps1  model-commands.py  model-picker.py  model-switcher.py  setup-engram-backup.ps1  setup-engram-sync.sh  skill-health-check.py  usage-dashboard.bat  usage-dashboard.py
tests/: conftest-frontend.py  conftest.py  pytest.ini  run_tests.sh  test_agent_logic.py  test_agents.py  test_ci_workflows.py  test_cross_references.py  test_frontend_manifests.py  (+4 more)
(+568 files in other folders)
